[gd_scene load_steps=11 format=2]

[ext_resource path="res://SCENES/End.gd" type="Script" id=1]
[ext_resource path="res://Fonts/MainFont.tres" type="DynamicFont" id=2]
[ext_resource path="res://_assets_raw/intro-003-00.png" type="Texture" id=3]
[ext_resource path="res://_assets_raw/intro-003-01.png" type="Texture" id=4]
[ext_resource path="res://_assets_raw/intro-002-00.png" type="Texture" id=5]
[ext_resource path="res://_assets_raw/intro-002-01.png" type="Texture" id=6]
[ext_resource path="res://Sound/BeepBox-Song2.wav" type="AudioStream" id=7]
[ext_resource path="res://Sound/WIN.wav" type="AudioStream" id=8]
[ext_resource path="res://Sound/LOSE.wav" type="AudioStream" id=9]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 5 ), ExtResource( 6 ) ],
"loop": true,
"name": "1",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ), ExtResource( 4 ) ],
"loop": true,
"name": "0",
"speed": 5.0
} ]

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Label" type="Label" parent="CanvasLayer"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 128.0
margin_top = 151.0
margin_right = -406.0
margin_bottom = 215.0
rect_scale = Vector2( 2, 2 )
custom_fonts/font = ExtResource( 2 )
text = "END
"
align = 1
autowrap = true
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="."]
wait_time = 6.0
one_shot = true
autostart = true

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 403.516, 259.317 )
frames = SubResource( 1 )
animation = "1"
playing = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
autoplay = true

[node name="AudioStreamPlayer2DWIN" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 8 )

[node name="AudioStreamPlayer2DLose" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 9 )
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
